--- a/src/main/resources/META-INF/assets/css/jonglisto.less
+++ b/src/main/resources/META-INF/assets/css/jonglisto.less
@@ -307,3 +307,17 @@ legend {
   vertical-align: top;
 }
 
+
+.scrollable {
+   overflow: auto;
+   max-height: 70vh;
+}
+
+.commandtext {
+     font-weight: bold;
+}
+
+.commandresult {
+    font-family: monospace;
+}
+
