some reformats (mostly less files) fails horribly

--- a/tools/build-bootstrap/customize.less
+++ b/tools/build-bootstrap/customize.less
@@ -1,3 +1,12 @@
-@grid-columns:              36;
-@grid-gutter-width:         20px;
-
+@
+grid-columns
+:
+              
+36;
+@
+grid-gutter-width
+:
+         
+20
+px
+;
