--- a/tools/build-bootstrap/less/mixins/text-overflow.less
+++ b/tools/build-bootstrap/less/mixins/text-overflow.less
@@ -1,8 +1,8 @@
-// Text overflow
-// Requires inline-block or block for proper styling
+//
+Text overflow // Requires inline-block or block for proper styling
 
-.text-overflow() {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+.text-overflow () {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
