--- a/tools/build-bootstrap/less/mixins/background-variant.less
+++ b/tools/build-bootstrap/less/mixins/background-variant.less
@@ -1,9 +1,9 @@
-// Contextual backgrounds
+//
+Contextual backgrounds
 
-.bg-variant(@color) {
-  background-color: @color;
-  a&:hover,
-  a&:focus {
-    background-color: darken(@color, 10%);
-  }
+.bg-variant (@color) {
+    background-color: @color;
+    a &: hover, a&:focus{
+    background-color: darken(@ color, 10%);
+}
 }
