--- a/tools/build-bootstrap/less/mixins/list-group.less
+++ b/tools/build-bootstrap/less/mixins/list-group.less
@@ -1,30 +1,37 @@
-// List Groups
+//
+List Groups
 
-.list-group-item-variant(@state; @background; @color) {
-  .list-group-item-@{state} {
+.list-group-item-variant (@state; @background ; @color ) { .list-group-item-
+    @{state
+    
+}
+
+{
+color: @color ;
+    background-color: @background ;
+
+    a &, button & {
     color: @color;
-    background-color: @background;
+    .
+    list-group-item-heading
+    {
+    color
+    :
+    inherit;
+}
 
-    a&,
-    button& {
-      color: @color;
+&
+:hover, &:focus {
+    color: @color;
+    background-color: darken(@ background, 5%);
+}
 
-      .list-group-item-heading {
-        color: inherit;
-      }
-
-      &:hover,
-      &:focus {
-        color: @color;
-        background-color: darken(@background, 5%);
-      }
-      &.active,
-      &.active:hover,
-      &.active:focus {
-        color: #fff;
-        background-color: @color;
-        border-color: @color;
-      }
-    }
-  }
+&
+.active, &.active:hover, &.active:focus {
+    color: #fff;
+    background-color: @color;
+    border-color: @color;
+}
+}
+}
 }
