--- a/tools/build-bootstrap/less/mixins/panels.less
+++ b/tools/build-bootstrap/less/mixins/panels.less
@@ -1,24 +1,34 @@
-// Panels
+//
+Panels
 
-.panel-variant(@border; @heading-text-color; @heading-bg-color; @heading-border) {
-  border-color: @border;
-
-  & > .panel-heading {
-    color: @heading-text-color;
+.panel-variant (@border; @heading-text-color ; @heading-bg-color ; @heading-border
+    ) {
+    border-color: @border; & > . panel-heading { color : @
+    heading-text-color;
     background-color: @heading-bg-color;
     border-color: @heading-border;
+    +
+    .
+    panel-collapse
+    >
+    .panel-body
+    {
+    border-top-color
+    :
+    @
+    border;
+}
 
-    + .panel-collapse > .panel-body {
-      border-top-color: @border;
-    }
-    .badge {
-      color: @heading-bg-color;
-      background-color: @heading-text-color;
-    }
-  }
-  & > .panel-footer {
-    + .panel-collapse > .panel-body {
-      border-bottom-color: @border;
-    }
-  }
+.badge {
+    color: @heading-bg-color;
+    background-color: @heading-text-color;
+}
+
+}
+&
+>
+.panel-footer { + .panel-collapse > .panel-body { border-bottom-color: @border;
+    
+}
+}
 }
