--- a/tools/build-bootstrap/less/mixins/progress-bar.less
+++ b/tools/build-bootstrap/less/mixins/progress-bar.less
@@ -1,10 +1,21 @@
-// Progress bars
+//
+Progress bars
 
-.progress-bar-variant(@color) {
-  background-color: @color;
-
-  // Deprecated parent class requirement as of v3.2.0
-  .progress-striped & {
-    #gradient > .striped();
-  }
+.progress-bar-variant (@color) {
+    background-color: @color;
+    //
+    Deprecated
+    parent
+    class
+    requirement
+    as
+    of
+    v3.2.0
+    .progress-striped
+    &
+    {
+    #gradient
+    >
+    .striped();
+}
 }
