--- a/tools/build-bootstrap/less/mixins/responsive-visibility.less
+++ b/tools/build-bootstrap/less/mixins/responsive-visibility.less
@@ -1,15 +1,26 @@
-// Responsive utilities
-
 //
-// More easily include all the states for responsive-utilities.less.
-.responsive-visibility() {
-  display: block !important;
-  table&  { display: table !important; }
-  tr&     { display: table-row !important; }
-  th&,
-  td&     { display: table-cell !important; }
+Responsive utilities // // More easily include all the states for responsive-utilities.less
+    .
+.responsive-visibility () {
+    display: block !important;
+    table
+    &
+    {
+    display
+    :
+    table
+    !important;
 }
 
-.responsive-invisibility() {
-  display: none !important;
+tr & {
+    display: table-row !important;
+}
+
+th &, td & {
+    display: table-cell !important;
+}
+
+}
+.responsive-invisibility () {
+    display: none !important;
 }
