--- a/tools/build-bootstrap/less/mixins/size.less
+++ b/tools/build-bootstrap/less/mixins/size.less
@@ -1,10 +1,11 @@
-// Sizing shortcuts
+//
+Sizing shortcuts
 
-.size(@width; @height) {
-  width: @width;
-  height: @height;
+.size (@width; @height ) {
+    width: @width;
+    height: @height;
 }
 
-.square(@size) {
-  .size(@size; @size);
+.square (@size) { .size (@size; @size );
+    
 }
