--- a/tools/build-bootstrap/less/mixins/tab-focus.less
+++ b/tools/build-bootstrap/less/mixins/tab-focus.less
@@ -1,9 +1,9 @@
-// WebKit-style focus
+//
+WebKit-style focus
 
-.tab-focus() {
-  // WebKit-specific. Other browsers will keep their default outline style.
-  // (Initially tried to also force default via `outline: initial`,
-  // but that seems to erroneously remove the outline in Firefox altogether.)
-  outline: 5px auto -webkit-focus-ring-color;
-  outline-offset: -2px;
+.tab-focus () { // WebKit-specific . Other browsers will keep their
+    default outline style. // (Initially tried to also force default via
+    `outline:initial `,// butthatseemstoerroneouslyremovetheoutlineinFirefoxaltogether.)outline
+    : 5pxauto-webkit-focus-ring-color;
+    outline-offset: -2px;
 }
