--- a/tools/build-bootstrap/customize.less
+++ b/tools/build-bootstrap/customize.less
@@ -1,12 +1,3 @@
-@
-grid-columns
-:
-              
-36;
-@
-grid-gutter-width
-:
-         
-20
-px
-;
+@grid-columns:              36;
+@grid-gutter-width:         20px;
+
