--- a/tools/build-bootstrap/less/mixins/text-emphasis.less
+++ b/tools/build-bootstrap/less/mixins/text-emphasis.less
@@ -1,9 +1,9 @@
-//
-Typography
+// Typography
 
-.text-emphasis-variant (@color) {
-    color: @color;
-    a &: hover, a&:focus{
-    color: darken(@ color, 10%);
-}
+.text-emphasis-variant(@color) {
+  color: @color;
+  a&:hover,
+  a&:focus {
+    color: darken(@color, 10%);
+  }
 }
