--- a/tools/build-bootstrap/less/mixins/alerts.less
+++ b/tools/build-bootstrap/less/mixins/alerts.less
@@ -1,23 +1,14 @@
-//
-Alerts
+// Alerts
 
-.alert-variant (@background; @border ; @text-color ) {
-    background-color: @background;
-    border-color: @border;
-    color: @text-color;
-    hr
-    {
-    border-top-color
-    :
-    darken(
-    @
-    border
-    ,
-    5%
-    );
-}
+.alert-variant(@background; @border; @text-color) {
+  background-color: @background;
+  border-color: @border;
+  color: @text-color;
 
-.alert-link {
-    color: darken(@ text-color, 10%);
-}
+  hr {
+    border-top-color: darken(@border, 5%);
+  }
+  .alert-link {
+    color: darken(@text-color, 10%);
+  }
 }
