--- a/tools/build-bootstrap/less/mixins/center-block.less
+++ b/tools/build-bootstrap/less/mixins/center-block.less
@@ -1,8 +1,7 @@
-//
-Center-align a block level element
+// Center-align a block level element
 
-.center-block () {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+.center-block() {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
