--- a/tools/build-bootstrap/less/mixins/opacity.less
+++ b/tools/build-bootstrap/less/mixins/opacity.less
@@ -1,7 +1,8 @@
-//
-Opacity
+// Opacity
 
-.opacity (@opacity) {
-    opacity: @opacity; // IE8 filter @opacity-ie : (@ opacity * 100);
-    filter: ~"alpha(opacity=@{opacity-ie})";
+.opacity(@opacity) {
+  opacity: @opacity;
+  // IE8 filter
+  @opacity-ie: (@opacity * 100);
+  filter: ~"alpha(opacity=@{opacity-ie})";
 }
