--- a/tools/build-bootstrap/less/mixins/resize.less
+++ b/tools/build-bootstrap/less/mixins/resize.less
@@ -1,18 +1,6 @@
-//
-Resize anything
+// Resize anything
 
-.resizable (@direction) {
-    resize: @direction; //
-    Options: horizontal, vertical, both overflow: auto;
-    //
-    Per
-    CSS3
-    UI,
-    `resize`
-    only
-    applies
-    when
-    `overflow`
-    isn't
-    `visible`
+.resizable(@direction) {
+  resize: @direction; // Options: horizontal, vertical, both
+  overflow: auto; // Per CSS3 UI, `resize` only applies when `overflow` isn't `visible`
 }
