--- a/tools/build-bootstrap/less/utilities.less
+++ b/tools/build-bootstrap/less/utilities.less
@@ -1,49 +1,55 @@
 //
-//
-Utility classes // -------------------------------------------------- //
-    Floats // ------------------------- .clearfix { .clearfix ();
-    
-}
+// Utility classes
+// --------------------------------------------------
 
-.center-block { .center-block ();
-    
-}
 
+// Floats
+// -------------------------
+
+.clearfix {
+  .clearfix();
+}
+.center-block {
+  .center-block();
+}
 .pull-right {
-    float: right !important;
+  float: right !important;
 }
-
 .pull-left {
-    float: left !important;
+  float: left !important;
 }
 
-//
-Toggling content // ------------------------- // Note: Deprecated .hide in favor of .hidden or .sr-only 
-    (as appropriate ) in v3.0.1
+
+// Toggling content
+// -------------------------
+
+// Note: Deprecated .hide in favor of .hidden or .sr-only (as appropriate) in v3.0.1
 .hide {
-    display: none !important;
+  display: none !important;
 }
-
 .show {
-    display: block !important;
+  display: block !important;
 }
-
 .invisible {
-    visibility: hidden;
+  visibility: hidden;
+}
+.text-hide {
+  .text-hide();
 }
 
-.text-hide { .text-hide ();
-    
-}
 
+// Hide from screenreaders and browsers
 //
-Hide from screenreaders and browsers // // Credit: HTML5 Boilerplate
+// Credit: HTML5 Boilerplate
 
 .hidden {
-    display: none !important;
+  display: none !important;
 }
 
-//
-For Affix plugin // ------------------------- .affix {
-    position: fixed;
+
+// For Affix plugin
+// -------------------------
+
+.affix {
+  position: fixed;
 }
