very first preparation for channels.conf sorting

--- a/src/main/resources/vdr/jonglisto/web/components/ChannelSelectPalette.tml
+++ b/src/main/resources/vdr/jonglisto/web/components/ChannelSelectPalette.tml
@@ -1,7 +1,7 @@
 <html lang="de" xmlns="http://www.w3.org/1999/xhtml" xmlns:t="http://tapestry.apache.org/schema/tapestry_5_4.xsd" xmlns:p="tapestry:parameter">
-	<t:content>
-		<div class="form-group col-sm-36">
-			<t:zone t:id="channelPaletteZone" id="channelPaletteZone">
+    <t:content>
+        <div class="form-group col-sm-36">
+            <t:zone t:id="channelPaletteZone" id="channelPaletteZone">
 
                 <t:select t:id="group" model="groups" value="group" blankOption="ALWAYS" blankLabel="Alle..." />
                 <br />
@@ -13,23 +13,14 @@
 
                 &nbsp;
                 <t:label for="select_alpha" />
-            
-                <!-- 
-				<t:select t:id="group" model="groups" value="group" blankOption="ALWAYS" blankLabel="Alle..." t:mixins="zoneUpdater" ZoneUpdater.clientEvent="change"
-					ZoneUpdater.event="palSelectGroup" ZoneUpdater.zone="channelPaletteZone" ZoneUpdater.addValue="$('#chpal').find(':hidden')" />
-				<br />
 
-				<div id="chpal">
-					<t:Palette t:id="XXpalette" t:model="model" t:selected="selectedChannels" t:encoder="encoder" />
-				</div>
-				<t:Checkbox t:id="select_alpha" type="checkbox" label="message:select_alpha" value="sortAlpha" t:mixins="zoneUpdater" ZoneUpdater.clientEvent="change"
-					ZoneUpdater.event="palSelectAlpha" ZoneUpdater.zone="channelPaletteZone" ZoneUpdater.addValue="$('#chpal').find(':hidden')" />
-
-				&nbsp;
-				<t:label for="select_alpha" />                
-                -->
-			</t:zone>
-		</div>
-	</t:content>
+                <!-- <t:select t:id="group" model="groups" value="group" blankOption="ALWAYS" blankLabel="Alle..." t:mixins="zoneUpdater" ZoneUpdater.clientEvent="change" 
+                    ZoneUpdater.event="palSelectGroup" ZoneUpdater.zone="channelPaletteZone" ZoneUpdater.addValue="$('#chpal').find(':hidden')" /> <br /> <div id="chpal"> <t:Palette 
+                    t:id="XXpalette" t:model="model" t:selected="selectedChannels" t:encoder="encoder" /> </div> <t:Checkbox t:id="select_alpha" type="checkbox" label="message:select_alpha" 
+                    value="sortAlpha" t:mixins="zoneUpdater" ZoneUpdater.clientEvent="change" ZoneUpdater.event="palSelectAlpha" ZoneUpdater.zone="channelPaletteZone" ZoneUpdater.addValue="$('#chpal').find(':hidden')" 
+                    /> &nbsp; <t:label for="select_alpha" /> -->
+            </t:zone>
+        </div>
+    </t:content>
 </html>
 	
