--- a/src/main/resources/META-INF/assets/css/jonglisto.less
+++ b/src/main/resources/META-INF/assets/css/jonglisto.less
@@ -307,7 +307,6 @@ legend {
   vertical-align: top;
 }
 
-
 .scrollable {
    overflow: auto;
    max-height: 70vh;
@@ -319,4 +318,62 @@ legend {
 
 .commandresult {
     font-family: monospace;
+}
+  
+.portlet-column {
+    width: 309px;
+    float: left;
+    // padding-bottom: 100px;
+    padding-bottom: 25px;
+}
+ 
+.portlet {
+    margin: 0 1em 1em 0;
+    padding: 0.3em;
+}
+ 
+.portlet-header {
+    padding: 0.2em 0.3em;
+    margin-bottom: 0.5em;
+    position: relative;
+}
+ 
+.portlet-toggle {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    margin-top: -8px;
+}
+ 
+.portlet-content {
+    display:none;
+    padding: 0.4em;
+}
+ 
+.portlet-placeholder {
+    border: 1px dotted black;
+    margin: 0 1em 1em 0;
+    height: 50px;
+}
+
+.sortable { 
+    list-style-type: none; 
+    margin: 0; 
+    padding: 0; 
+    width: 100%; 
+}
+
+.sortable li { 
+    margin: 0 3px 3px 3px; 
+    padding-left: 1.5em; 
+    height: 18px; 
+}
+
+.sortable li span { 
+    position: absolute; 
+    margin-left: -1.3em; 
+}
+
+.caright {
+    float: right;   
 }
