--- a/src/main/resources/vdr/jonglisto/web/components/SearchTimerResult.tml
+++ b/src/main/resources/vdr/jonglisto/web/components/SearchTimerResult.tml
@@ -2,9 +2,10 @@
     <t:content>
         <t:zone t:id="epgListZone" id="epgListZone">
             <div class="row">
-                <strong>Anzahl der Suchergebnisse: ${count}</strong><br/>
+                <strong>Anzahl der Suchergebnisse: ${count}</strong>
+                <br />
             </div>
-            
+
             <t:grid source="epgData" row="epgMap" model="epgModel" inplace="true">
                 <p:titleCell>
                     <t:eventlink t:event="showEpg" t:context="[useId,channelName]" zone="^">
@@ -13,26 +14,18 @@
                     <br />
                     ${map:epgMap['shorttext']}
                 </p:titleCell>
-                
+
                 <p:channelidCell>
                     <t:ChannelImage channelName="channelName" />
                 </p:channelidCell>
 
-                <!-- 
-                <p:actionCell>
-                    <t:pagelink page="timer" parameters="{'newTimerUseId':useId, 'channelName':channelName}">
-                        <img src="${asset:record.svg}" alt="Record Timer" data-toggle="tooltip" title="Timer anlegen" class="iconwhlarge tooltipTop" />
-                    </t:pagelink>
-
-                    <t:eventlink t:event="switchChannel" context="channelId">
-                        <img src="${asset:umschalten.svg}" alt="Channel Switch" data-toggle="tooltip" title="TV umschalten" class="iconwhlarge tooltipTop" />
-                    </t:eventlink>
-                </p:actionCell>
-                -->
+                <!-- <p:actionCell> <t:pagelink page="timer" parameters="{'newTimerUseId':useId, 'channelName':channelName}"> <img src="${asset:record.svg}" alt="Record 
+                    Timer" data-toggle="tooltip" title="Timer anlegen" class="iconwhlarge tooltipTop" /> </t:pagelink> <t:eventlink t:event="switchChannel" context="channelId"> <img 
+                    src="${asset:umschalten.svg}" alt="Channel Switch" data-toggle="tooltip" title="TV umschalten" class="iconwhlarge tooltipTop" /> </t:eventlink> </p:actionCell> -->
             </t:grid>
         </t:zone>
-        
+
         <!-- insert epg info zone -->
-        <t:Epg useid="epgDetailUseId" channelName="epgDetailChannelName" />        
+        <t:Epg useid="epgDetailUseId" channelName="epgDetailChannelName" />
     </t:content>
 </html>
