--- a/src/main/resources/vdr/jonglisto/web/components/SvdrpConsole.tml
+++ b/src/main/resources/vdr/jonglisto/web/components/SvdrpConsole.tml
@@ -7,13 +7,14 @@
                     <div class="form-group row">
                         <t:label for="svdrp_vdr" class="col-sm-3 col-form-label" />
                         <div class="col-sm-3">
-                            <t:select t:id="svdrp_vdr" value="selectedVdr" label="message:svdrp_vdr" t:model="vdrModel" t:encoder="vdrEncoder" blankOption="NEVER" />
+                            <t:select t:id="svdrp_vdr" value="selectedVdr" label="message:svdrp_vdr" t:model="vdrModel" t:encoder="vdrEncoder"
+                                blankOption="NEVER" />
                         </div>
 
                         <div class="col-sm-20">
                             <t:TextField id="svdrpinput" t:id="svdrpinput" value="svdrpCommand" label="message:svdrp_input" size="150" />
                         </div>
-                        
+
                         <div class="col-sm-3">
                             <t:submit t:id="defaultSubmit" />
                         </div>
@@ -22,9 +23,9 @@
                     <div class="form-group row">
                         <strong>Ausgabe</strong>
                     </div>
-                    
+
                     <div class="form-group row scrollable" id="svdrpconsole">
-                    </div>                    
+                    </div>
                 </t:form>
             </t:zone>
         </div>
