drag and drop in channel config works now, functionality is still missing

--- a/src/main/resources/META-INF/assets/css/jonglisto.less
+++ b/src/main/resources/META-INF/assets/css/jonglisto.less
@@ -356,20 +356,20 @@ legend {
     height: 50px;
 }
 
-.sortable { 
+.sortable, .connectedSortable { 
     list-style-type: none; 
     margin: 0; 
     padding: 0; 
     width: 100%; 
 }
 
-.sortable li { 
+.sortable li, .connectedSortable li { 
     margin: 0 3px 3px 3px; 
     padding-left: 1.5em; 
     height: 18px; 
 }
 
-.sortable li span { 
+.sortable li span, .connectedSortable li span { 
     position: absolute; 
     margin-left: -1.3em; 
 }
